2007-11-13  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/entity/ChartEntity.java
	(hashCode): Implemented,
	* source/org/jfree/chart/entity/PieSectionEntity.java
	(equals): Implemented,
	(hashCode): Likewise.

2007-11-13  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/HashUtilities.java
	(hashCode(int, boolean)): New method,
	(hashCode(int, double)): Likewise,
	(hashCode(int, Paint)): Likewise,
	(hashCode(int, Stroke)): Likewise,
	(hashCode(int, String)): Likewise.

2007-11-13  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/dial/AbstractDialLayer.java
	(hashCode): Implemented.

2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/statistics/DefaultBoxAndWhiskerXYDataset.java
	(add): Fire dataset change event,
	(getY): Removed redundant constructor call,
	(equals): New method override,
	(clone): Likewise.

2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/XYPlot.java
	(equals): Added check for domain/rangeTickBandPaint,
	* source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
	(fillDomainGridBand): Handle plot orientation properly,
	(fillRangeGridBand): Likewise.

2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>

	Patch 1827829 from Richard West:
	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
	(drawItemLabel): Fixed NPE.

2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYAreaRenderer.java
	(drawItem): Simplified entity generation,
	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
	(drawItem): Likewise.

2007-11-09  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYDotRenderer.java
	(legendShape): New field,
	(XYDotRenderer): Initialise new field,
	(getLegendShape): New method,
	(setLegendShape): Likewise,
	(getLegendItem): New method override,