@@ -1,5 +1,10 @@
 2007-11-13  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/chart/axis/ModuloAxis.java
+	(equals): Implemented.
+
+2007-11-13  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/entity/ChartEntity.java
 	(hashCode): Implemented,
 	* source/org/jfree/chart/entity/PieSectionEntity.java
